# damage_prediction_AE

./: .gitignore  config.py  metrics.csv  pyproject.toml  requirements.txt  setup.py
.texlive2021/texmf-var/web2c/pdftex/: latex.fmt
config/: .casedefinition.toml  settings.toml
logs/mlflow/0/: meta.yaml
logs/mlflow/912182730344410550/: meta.yaml
logs/mlflow/912182730344410550/38a467c9b99b49db8ca7f18c19a4ba94/: meta.yaml
logs/mlflow/912182730344410550/570494ea756d49b7a68f52a4f8de220b/: meta.yaml
logs/mlflow/912182730344410550/5a52b35ff6744749adddee92f42c9c6b/: meta.yaml
src/: __init__.py
src/callbacks/: progress_bar.py
src/damage_prediction_ae.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/data/: datamodule.py  simple_datamodule.py  sz.ipynb  utils.py
src/data_preprocessing/: __init__.py  data_prep.ipynb  preprocessing.ipynb  preprocessing_function.py  queries.py  scada_loading.ipynb  utils.py
src/evaluation/: metric.py
src/model/: Baseline_comparison.ipynb  Convolution_AE.ipynb  SNN_solo yacine.ipynb  SNN_solo.ipynb  __init__.py  ae_case_classification.ipynb  ae_signle_sensor.ipynb  autoencoder_fdns.ipynb  autoencoder_wf.ipynb  autoencoder_wf_single_direction.ipynb  backbone.py  backcone.py  prepared_queries.py  transformation.py  vae_multi_sensor.ipynb  vae_single_sensor.ipynb  vae_wf.ipynb
src/model/backbone/: AE.py  CAE.py  VAE.py  VQ_VAE.py  aligner.py  multihead_AE.py  regressor.py  utils.py  variational_AE.py
src/utils/: matplotlib_utils.py  rich_utils.py
test/data_prepreocessing/: test_utils.py
(+4 files in other folders)
